Fixed ui bug where MUI select icon was not showing

--- a/src/app/components/FieldDropdown/index.module.scss
+++ b/src/app/components/FieldDropdown/index.module.scss
@@ -44,6 +44,7 @@
       color: colors.$medium-gray;
     }
     .icon {
+      box-sizing: content-box;
       padding-right: 16px;
       padding-left: 16px;
     }
